--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   </head>
   <body>
 
+    <!-- nav -->
     <header>
     </header>
+    <!-- end nav -->
 
+    <!-- 0_home -->
     <section id="home"> 
     </section>
+    <!-- end 0_home -->
 
+    <!-- 01_rockclimb -->
     <section id="rockclimb">
       <div class="container">
         <div class="row">
@@ -24,10 +29,14 @@
         </div>
       </div>
     </section>
-
+    <!-- end 02_rockclimb -->
+    
+    <!-- 03_computer -->
     <section id="computer">
     </section>
+    <!-- end 03_computer -->
 
+    <!-- 04_icons -->
     <section id="icons">
       <div class="container">
           <div class="row">
@@ -45,10 +54,14 @@
           </div>
         </div>
     </section>
+    <!-- end 04_icons -->
 
+    <!-- 05_smileygirl -->
     <section id="smileygirl">
     </section>
+    <!-- end 05_smileygirl-->  
 
+    <!-- 06_carousel -->
     <section id="carousel">
         <div class="container">
             <div class="row">
@@ -62,7 +75,9 @@
             </div>
           </div>
     </section>
+    <!-- end 06_carousel-->
 
+    <!-- 07_footer -->
     <footer id="footer">
       <div class="col-md-12 text-center">
         <p><b>Follow us:</b></p>
@@ -71,6 +86,7 @@
         class="footer__icon">
       </div>
     </footer>
+    <!-- end 07_footer -->
 
     <script type="text/javascript" src="bundle.js"></script>
   </body>
