--- a/index.html
+++ b/index.html
@@ -1,93 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Rooster Grin Front End Dev Test</title>
-  </head>
-  <body>
 
-    <!-- nav -->
-    <header>
-    </header>
-    <!-- end nav -->
+<head>
+  <meta charset="utf-8">
+  <title>Rooster Grin Front End Dev Test</title>
+</head>
 
-    <!-- 0_home -->
-    <section id="home"> 
-    </section>
-    <!-- end 0_home -->
+<body>
 
-    <!-- 01_rockclimb -->
-    <section id="rockclimb">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. Maecenas iaculis, est vel hendrerit ultrices, odio purus pretium libero, ut lacinia mi sapien non purus. Pellentesque at nunc at odio tincidunt accumsan tristique id nisl. Quisque convallis enim et semper sodales. Duis mi nisl, tincidunt a sodales sit amet, fermentum vitae justo. Nunc nec sagittis justo. Duis nibh risus, facilisis elementum suscipit vel, lobortis quis dolor.</p>
-            <a href="#">&#62; Lorem Ipsum</a>
-          </div>
-          <div class="col-md-6" id="rockclimb__picture"></div>
+  <!-- nav -->
+  <header class="navbar nav-fixedtop">
+    <div class="container">
+      <img src="/src/images/logo-white.svg" data-alt-src="logo-color.svg" alt="logo-white.svg" id="top-logo">
+    </div>
+  </header>
+  <!-- end nav -->
+
+  <!-- 0_home -->
+  <section id="home">
+    <div class="container-fluid h-100">
+      <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-12 text-center">
+          <h1>Welcome To</h1>
+          <h1>Rooster Grin</h1>
+          <button type="button" class="btn button-purp">Button Button</button>
         </div>
       </div>
-    </section>
-    <!-- end 02_rockclimb -->
-    
-    <!-- 03_computer -->
-    <section id="computer">
-    </section>
-    <!-- end 03_computer -->
+    </div>
+  </section>
+  <!-- end 0_home -->
 
-    <!-- 04_icons -->
-    <section id="icons">
-      <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <h1>Lorem Ipsum</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. Maecenas iaculis, est vel hendrerit ultrices, odio purus pretium libero, ut lacinia mi sapien non purus. Pellentesque at nunc at odio tincidunt accumsan tristique id nisl. Quisque convallis enim et semper sodales. Duis mi nisl, tincidunt a sodales sit amet, fermentum vitae justo. Nunc nec sagittis justo. Duis nibh risus, facilisis elementum suscipit vel, lobortis quis dolor.</p>
-              <a href="#">&#62; Lorem Ipsum</a>
-            </div>
-            <div id="icons_circles" class="col-md-6">
-              <img src="/src/images/home-expertise.svg">
-              <img src="/src/images/home-hygiene.svg">
-              <img src="/src/images/home-lab.svg">
-              <img src="/src/images/home-retention.svg">
-            </div>
-          </div>
+  <!-- 01_rockclimb -->
+  <section id="rockclimb">
+    <div class="container-fluid px-0">
+      <div class="row h-100">
+        <div class="col-sm-12 col-lg-6 pad-text">
+          <h2 class="title-lightpurple">LOREM IPSUM</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+          est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula
+          scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. Maecenas
+          iaculis, est vel hendrerit ultrices, odio purus pretium libero, ut lacinia mi sapien non purus. </p>
+          <a href="#">&#62; Lorem Ipsum</a>
         </div>
-    </section>
-    <!-- end 04_icons -->
-
-    <!-- 05_smileygirl -->
-    <section id="smileygirl">
-    </section>
-    <!-- end 05_smileygirl-->  
-
-    <!-- 06_carousel -->
-    <section id="carousel">
-        <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <h1>Lorem Ipsum</h1>
-                <p>5 Star Images</p>
-              </div>
-              <div class="col-md-6">
-                carousal
-              </div>
-            </div>
-          </div>
-    </section>
-    <!-- end 06_carousel-->
-
-    <!-- 07_footer -->
-    <footer id="footer">
-      <div class="col-md-12 text-center">
-        <p><b>Follow us:</b></p>
-        <img src="/src/images/instagram.svg" class="footer__icon">
-        <img src="/src/images/facebook.svg"
-        class="footer__icon">
+        <div class="col-sm-12 col-lg-6 img-rockclimb">
+          <img src="/src/images/img-1.jpg">
+        </div>
       </div>
-    </footer>
-    <!-- end 07_footer -->
+    </div>
+  </section>
+  <!-- end 02_rockclimb -->
 
-    <script type="text/javascript" src="bundle.js"></script>
-  </body>
+  <!-- 03_computer -->
+  <section id="computer">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-2"></div>
+        <div class="col-6 my-auto justify-content-center">
+          <h2 class="title-darkpurple">LOREM IPSUM</h2>
+          <button type="button" class="btn button-org">Button Button</button>
+        </div>
+        <div class="col-4"></div>
+      </div>
+    </div>
+  </section>
+  <!-- end 03_computer -->
+
+  <!-- 04_icons -->
+  <div class="container-fluid px-0">
+      <div class="row">
+        <div class="col-sm-12 col-lg-6 pad-text">
+          <h2>LOREM IPSUM</h2>
+          <h2>DOLOR SIT AMET</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+          est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula
+          scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. </p>
+          <a href="#">&#62; Lorem Ipsum</a>
+        </div>
+        <div class="col-sm-6 col-lg-2 bg-color-icons text-center">
+          <img src="/src/images/home-expertise.svg" class="icons_circles">
+          <img src="/src/images/home-hygiene.svg" class="icons_circles">
+        </div>
+        <div class="col-sm-6 col-lg-2 bg-color-icons text-center">
+          <img src="/src/images/home-lab.svg" class="thumbnail icons_circles">
+          <img src="/src/images/home-retention.svg" class="icons_circles">
+        </div>
+        <div class="col-2 bg-color-icons"></div>
+      </div>
+    </div>
+  </section>
+  <!-- end 04_icons -->
+
+  <!-- 05_smileygirl -->
+  <section id="smileygirl">
+  </section>
+  <!-- end 05_smileygirl-->
+
+  <!-- 06_carousel -->
+  <section id="carousel">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>LOREM IPSUM</h2>
+          <p>5 Star Images</p>
+        </div>
+        <div class="col-md-6">
+          carousal
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end 06_carousel-->
+
+  <!-- 07_footer -->
+  <footer id="footer">
+    <div class="col-md-12 text-center">
+      <p><b>Follow us:</b></p>
+      <img src="/src/images/instagram.svg" class="footer__icon">
+      <img src="/src/images/facebook.svg" class="footer__icon">
+    </div>
+  </footer>
+  <!-- end 07_footer -->
+
+
+  <script type="text/javascript" src="bundle.js"></script>
+</body>
+
 </html>
