--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+    
   <!-- nav -->
   <header class="navbar nav-fixedtop">
     <div class="container">
@@ -34,7 +34,8 @@
   <section id="rockclimb">
     <div class="container-fluid px-0">
       <div class="row h-100">
-        <div class="col-sm-12 col-lg-6 pad-text">
+        <div class="col-sm-0 col-lg-2"></div>
+        <div class="col-sm-12 col-lg-4 pad-text">
           <h2 class="title-lightpurple">LOREM IPSUM</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
           est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula
@@ -51,7 +52,7 @@
   <!-- end 02_rockclimb -->
 
   <!-- 03_computer -->
-  <section id="computer">
+ <section id="computer">
     <div class="container-fluid h-100">
       <div class="row h-100">
         <div class="col-2"></div>
@@ -66,9 +67,11 @@
   <!-- end 03_computer -->
 
   <!-- 04_icons -->
-  <div class="container-fluid px-0">
+  <section id="icons">
+    <div class="container-fluid h-100 p-0">
       <div class="row">
-        <div class="col-sm-12 col-lg-6 pad-text">
+        <div class="col-sm-0 col-lg-2"></div>
+        <div class="col-sm-12 col-lg-4 pad-text">
           <h2>LOREM IPSUM</h2>
           <h2>DOLOR SIT AMET</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
@@ -92,36 +95,80 @@
 
   <!-- 05_smileygirl -->
   <section id="smileygirl">
+    <div class="container-fluid h-100">
+        <div class="row h-100">
+          <div class="col-7"></div>
+          <div class="col-4 my-auto justify-content-center">
+            <h2 class="title-darkpurple"><b>LOREM IPSUM</b></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+            est at aliquam. Integer et congue urna. Duis vestibulum tincidunt
+            est.</p>
+            <button type="button" class="btn button-org">Button Button</button>
+          </div>
+          <div class="col-1"></div>
+        </div>
+      </div>
   </section>
   <!-- end 05_smileygirl-->
 
   <!-- 06_carousel -->
   <section id="carousel">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-md-0 col-lg-2"></div>
+        <div class="cold md-12 col-lg-4 my-auto justify-content-center">
           <h2>LOREM IPSUM</h2>
-          <p>5 Star Images</p>
+          <h2>DOLOR SIT AMET</h2>
+          <img src="/src/images/5stars.png">
         </div>
-        <div class="col-md-6">
-          carousal
+        <div class="col-md-12 col-lg-6">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <p class="p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+                  est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est.</p>
+                </div>
+                <div class="carousel-item">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+                        est at aliquam. Integer et congue urna. Duis vestibulum tincidunt
+                        est.</p>
+                </div>
+                <div class="carousel-item">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
+                        est at aliquam. Integer et congue urna. Duis vestibulum tincidunt
+                        est.</p>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- end 06_carousel-->
+  <!-- end 06_carousel -->
 
   <!-- 07_footer -->
   <footer id="footer">
     <div class="col-md-12 text-center">
       <p><b>Follow us:</b></p>
-      <img src="/src/images/instagram.svg" class="footer__icon">
-      <img src="/src/images/facebook.svg" class="footer__icon">
+      <img src="/src/images/instagram.svg" class="footer-icon">
+      <img src="/src/images/facebook.svg" class="footer-icon">
     </div>
   </footer>
   <!-- end 07_footer -->
-
-
+  
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 
