--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
   <section id="carousel">
     <div class="container-fluid h-100">
       <div class="row h-100">
-        <div class="col-md-0 col-lg-2"></div>
-        <div class="cold md-12 col-lg-4 my-auto justify-content-center">
+        <div class="col-2"></div>
+        <div class="col-4 my-auto justify-content-center">
           <h2>LOREM IPSUM</h2>
           <h2>DOLOR SIT AMET</h2>
           <img src="/src/images/5stars.png">
         </div>
-        <div class="col-md-12 col-lg-6">
+        <div class="col-6">
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -129,19 +129,17 @@
                 <li data-target="#myCarousel" data-slide-to="2"></li>
               </ol>
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <p class="p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
-                  est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est.</p>
+                <div class="carousel-item active p-5">
+                  <h5 class="title-lightpurple text-center">John Doe 08/08/2019</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna.</p>
                 </div>
-                <div class="carousel-item">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
-                        est at aliquam. Integer et congue urna. Duis vestibulum tincidunt
-                        est.</p>
+                <div class="carousel-item p-5">
+                  <h5 class="title-lightpurple text-center">Jane Doe 08/02/2019</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna.</p>
                 </div>
-                <div class="carousel-item">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
-                        est at aliquam. Integer et congue urna. Duis vestibulum tincidunt
-                        est.</p>
+                <div class="carousel-item p-5">
+                  <h5 class="title-lightpurple text-center">James Doe 08/04/2019</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna. Duis vestibulum tincidunt est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt est at aliquam. Integer et congue urna.</p>
                 </div>
               </div>
               <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -161,10 +159,10 @@
 
   <!-- 07_footer -->
   <footer id="footer">
-    <div class="col-md-12 text-center">
+    <div class="col-md-12 text-center p-4">
       <p><b>Follow us:</b></p>
-      <img src="/src/images/instagram.svg" class="footer-icon">
-      <img src="/src/images/facebook.svg" class="footer-icon">
+      <div class="footer-icon-instagram"></div>
+      <div class="footer-icon-facebook"></div>
     </div>
   </footer>
   <!-- end 07_footer -->
