--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container-fluid h-100">
       <div class="row h-100 justify-content-center align-items-center">
         <div class="col-12 text-center">
-          <h1>Welcome To</h1>
+          <img src="/src/images/welcome.png" id="text-welcome">
           <h1>Rooster Grin</h1>
           <button type="button" class="btn button-purp">Button Button</button>
         </div>
@@ -75,17 +75,25 @@
           <h2>LOREM IPSUM</h2>
           <h2>DOLOR SIT AMET</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et congue urna. Duis vestibulum tincidunt
-          est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula
-          scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. </p>
+            est at aliquam. Cras et arcu vitae nulla accumsan porttitor in quis neque. Mauris mollis turpis vel ligula
+            scelerisque, quis faucibus nisi posuere. Mauris ut purus sodales, aliquam ante eu, suscipit sapien. </p>
           <a href="#">&#62; Lorem Ipsum</a>
         </div>
         <div class="col-sm-6 col-lg-2 bg-color-icons text-center">
-          <img src="/src/images/home-expertise.svg" class="icons_circles">
-          <img src="/src/images/home-hygiene.svg" class="icons_circles">
+          <div class="icons_circles">
+            <img src="/src/images/home-expertise.svg">
+          </div>
+          <div class="icons_circles">
+            <img src="/src/images/home-hygiene.svg">
+          </div>
         </div>
         <div class="col-sm-6 col-lg-2 bg-color-icons text-center">
-          <img src="/src/images/home-lab.svg" class="thumbnail icons_circles">
-          <img src="/src/images/home-retention.svg" class="icons_circles">
+          <div class="icons_circles">
+            <img src="/src/images/home-lab.svg">
+          </div>
+          <div class="icons_circles">
+            <img src="/src/images/home-retention.svg">
+          </div>
         </div>
         <div class="col-2 bg-color-icons"></div>
       </div>
