FinalRevisions, to clean up code

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     
   <!-- nav -->
   <header class="navbar nav-fixedtop">
-    <div class="container">
+    <div class="container animated fadeInRight slow">
       <img src="/src/images/logo-white.svg" data-alt-src="logo-color.svg" alt="logo-white.svg" id="top-logo">
     </div>
+   
   </header>
   <!-- end nav -->
 
@@ -20,7 +21,7 @@
   <section id="home">
     <div class="container-fluid h-100">
       <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center animated fadeInDownBig slower">
           <img src="/src/images/welcome.png" id="text-welcome">
           <h1>Rooster Grin</h1>
           <button type="button" class="btn button-purp">Button Button</button>
